monitoring/healthchecks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: healthchecks
  name: healthchecks
  namespace: monitoring
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: healthchecks
  template:
    metadata:
      labels:
        app: healthchecks
    spec:
      containers:
        - name: healthchecks
          image: healthchecks/healthchecks:v4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http-hc
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8000
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 250m
              memory: 500Mi
