monitoring/telegraf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf
  namespace: monitoring
  labels:
    app: telegraf
spec:
  revisionHistoryLimit: 2
  minReadySeconds: 5
  replicas: 2
  selector:
    matchLabels:
      app: telegraf
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
      containers:
        - name: telegraf
          image: "telegraf:1.37.3"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: telegraf
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/telegraf/telegraf.conf
              name: telegraf-config
              subPath: telegraf.conf
              readOnly: true
            - mountPath: /etc/ssl/certs/local.crt
              name: local-ca-cert
              subPath: local.crt
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - "ALL"
      volumes:
        - name: telegraf-config
          configMap:
            name: telegraf-config-file
        - name: local-ca-cert
          secret:
            secretName: marcsellocorp-local-ca-cert
