monitoring/ttaproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttaproxy
  namespace: monitoring
  labels:
    app: ttaproxy
spec:
  revisionHistoryLimit: 2
  replicas: 2
  selector:
    matchLabels:
      app: ttaproxy
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ttaproxy
    spec:
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
      containers:
        - name: ttaproxy
          image: "marcsello/telegraf-tag-auth-proxy:7"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: ttaproxy
              protocol: TCP
          volumeMounts:
            - name: htpasswd-volume
              readOnly: true
              mountPath: "/etc/ttaproxy-htpasswd"
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - "ALL"
      volumes:
        - name: htpasswd-volume
          secret:
            secretName: ttaproxy-htpasswd
