monitoring/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-grafana  # defined in the deployment
  selector:
    app: grafana
