monitoring/healthchecks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthchecks-svc
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-healthchecks  # defined in the deployment
  selector:
    app: healthchecks
