monitoring/telegraf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-svc
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: telegraf  # defined in the deployment
  selector:
    app: telegraf
