monitoring/ttaproxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ttaproxy-svc
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: ttaproxy  # defined in the deployment
  selector:
    app: ttaproxy
