monitoring/healthchecks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: healthchecks-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/revision-history-limit: "2"
spec:
  tls:
    - hosts:
        - memechecks.monitoring.k8s.marcsello.com
      secretName: letsencrypt
  rules:
    - host: memechecks.monitoring.k8s.marcsello.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: healthchecks-svc
                port:
                  number: 80
